--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="621.0" prefWidth="874.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="movie_project.gui.BrugerFladeMainController">
+   <children>
+      <TableView fx:id="movieView" layoutX="367.0" layoutY="112.0" onMouseClicked="#onSelectedMovie" prefHeight="398.0" prefWidth="432.0">
+        <columns>
+          <TableColumn prefWidth="105.0" text="Name" />
+          <TableColumn prefWidth="101.0" text="Imdb Rating" />
+            <TableColumn prefWidth="112.0" text="Last viewed" />
+            <TableColumn prefWidth="113.0" text="My Rating" />
+        </columns>
+      </TableView>
+      <Button fx:id="newMovieBtn" layoutX="33.0" layoutY="549.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
+      <Button fx:id="editMovieBtn" layoutX="120.0" layoutY="549.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit" />
+      <Button fx:id="playMovieBtn" layoutX="206.0" layoutY="549.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
+      <ComboBox fx:id="comboMovie" layoutX="150.0" layoutY="227.0" prefWidth="150.0" />
+      <JFXTextField fx:id="filterField" layoutX="583.0" layoutY="39.0" />
+      <JFXButton fx:id="searchBtn" layoutX="718.0" layoutY="39.0" onAction="#searchAction" text="🔍" />
+      <Label layoutX="543.0" layoutY="43.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
+      <JFXButton layoutX="101.0" layoutY="227.0" onAction="#clickAddAction" text="Add" />
+   </children>
 </AnchorPane>
