--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -3,15 +3,16 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="621.0" prefWidth="874.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="movie_project.gui.BrugerFladeMainController">
+<AnchorPane id="AnchorPane" prefHeight="497.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
    <children>
-      <TableView fx:id="movieView" layoutX="367.0" layoutY="112.0" onMouseClicked="#onSelectedMovie" prefHeight="398.0" prefWidth="432.0">
+      <TableView fx:id="movieView" layoutX="217.0" layoutY="51.0" onMouseClicked="#onSelectedMovie" prefHeight="398.0" prefWidth="432.0">
         <columns>
           <TableColumn prefWidth="105.0" text="Name" />
           <TableColumn prefWidth="101.0" text="Imdb Rating" />
@@ -19,13 +20,18 @@
             <TableColumn prefWidth="113.0" text="My Rating" />
         </columns>
       </TableView>
-      <Button fx:id="newMovieBtn" layoutX="33.0" layoutY="549.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
-      <Button fx:id="editMovieBtn" layoutX="120.0" layoutY="549.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit" />
-      <Button fx:id="playMovieBtn" layoutX="206.0" layoutY="549.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
-      <ComboBox fx:id="comboMovie" layoutX="150.0" layoutY="227.0" prefWidth="150.0" />
-      <JFXTextField fx:id="filterField" layoutX="583.0" layoutY="39.0" />
-      <JFXButton fx:id="searchBtn" layoutX="718.0" layoutY="39.0" onAction="#searchAction" text="🔍" />
-      <Label layoutX="543.0" layoutY="43.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
-      <JFXButton layoutX="101.0" layoutY="227.0" onAction="#clickAddAction" text="Add" />
+      <Button fx:id="newMovieBtn" layoutX="400.0" layoutY="458.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
+      <Button fx:id="editMovieBtn" layoutX="487.0" layoutY="458.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit" />
+      <Button fx:id="playMovieBtn" layoutX="573.0" layoutY="458.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
+      <JFXTextField fx:id="filterField" layoutX="486.0" layoutY="14.0" />
+      <JFXButton fx:id="searchBtn" layoutX="621.0" layoutY="14.0" onAction="#searchAction" text="🔍" />
+      <Label layoutX="446.0" layoutY="18.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
+      <ListView layoutX="14.0" layoutY="79.0" prefHeight="370.0" prefWidth="200.0" />
+      <Label layoutX="81.0" layoutY="51.0" prefHeight="25.0" prefWidth="66.0" text="Categories">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Button layoutX="14.0" layoutY="458.0" mnemonicParsing="false" onAction="#NewCatAction" text="Add Category" />
    </children>
 </AnchorPane>
