--- a/src/movie_project/gui/AddWindow.fxml
+++ b/src/movie_project/gui/AddWindow.fxml
@@ -1,11 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="movie_project.gui.AddWindowController">
+   <children>
+      <Label layoutX="73.0" layoutY="90.0" prefHeight="30.0" prefWidth="66.0" text="Title:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="73.0" layoutY="131.0" text="Category:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="73.0" layoutY="179.0" text="Imdb Rating:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="comboCategory" layoutX="207.0" layoutY="134.0" prefWidth="150.0" />
+      <JFXButton layoutX="351.0" layoutY="124.0" onAction="#clickAddAction" text="Add...">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </JFXButton>
+      <Button fx:id="saveMovieBtn" layoutX="454.0" layoutY="344.0" mnemonicParsing="false" onAction="#clickSaveAction" text="Save" />
+      <Button fx:id="cancelMovieBtn" layoutX="367.0" layoutY="344.0" mnemonicParsing="false" onAction="#closeMovieAddBox" text="Cancel" />
+      <Button layoutX="230.0" layoutY="344.0" mnemonicParsing="false" onAction="#clickLoadCategoriesBtn" text="Load Categories" />
+      <TextField fx:id="txtImdbRating" layoutX="207.0" layoutY="182.0" />
+      <TextField fx:id="txtTitle" layoutX="207.0" layoutY="93.0" />
+      <Label layoutX="73.0" layoutY="225.0" text="File:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <JFXButton layoutX="363.0" layoutY="219.0" onAction="#clickChooseFile" text="Choose...">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </JFXButton>
+      <TextField layoutX="207.0" layoutY="228.0" />
+   </children>
 </AnchorPane>
