--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -20,8 +20,8 @@
             <TableColumn prefWidth="113.0" text="My Rating" />
         </columns>
       </TableView>
-      <Button fx:id="newMovieBtn" layoutX="400.0" layoutY="458.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
-      <Button fx:id="editMovieBtn" layoutX="487.0" layoutY="458.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit" />
+      <Button fx:id="newMovieBtn" layoutX="307.0" layoutY="458.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
+      <Button fx:id="editMovieBtn" layoutX="392.0" layoutY="458.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit Movie" />
       <Button fx:id="playMovieBtn" layoutX="573.0" layoutY="458.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
       <JFXTextField fx:id="filterField" layoutX="486.0" layoutY="14.0" />
       <JFXButton fx:id="searchBtn" layoutX="621.0" layoutY="14.0" onAction="#searchAction" text="🔍" />
@@ -33,5 +33,6 @@
          </font>
       </Label>
       <Button layoutX="14.0" layoutY="458.0" mnemonicParsing="false" onAction="#NewCatAction" text="Add Category" />
+      <Button fx:id="btnDeleteMovie" layoutX="476.0" layoutY="458.0" mnemonicParsing="false" onAction="#clickDeleteAction" text="Delete Movie" />
    </children>
 </AnchorPane>
