--- a/src/movie_project/gui/AddWindow.fxml
+++ b/src/movie_project/gui/AddWindow.fxml
@@ -8,45 +8,59 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="movie_project.gui.AddWindowController">
+<AnchorPane id="AnchorPane" prefHeight="218.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.AddWindowController">
    <children>
-      <Label layoutX="73.0" layoutY="90.0" prefHeight="30.0" prefWidth="66.0" text="Title:">
+      <Label layoutX="6.0" layoutY="8.0" prefHeight="30.0" prefWidth="66.0" text="Title:">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="73.0" layoutY="131.0" text="Category:">
+      <Label layoutX="7.0" layoutY="44.0" text="Category:">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="73.0" layoutY="179.0" text="Imdb Rating:">
+      <Label layoutX="7.0" layoutY="80.0" text="Imdb Rating:">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <ComboBox fx:id="comboCategory" layoutX="207.0" layoutY="134.0" prefWidth="150.0" />
-      <JFXButton layoutX="351.0" layoutY="124.0" onAction="#clickAddAction" text="Add...">
+      <ComboBox fx:id="comboCategory" layoutX="173.0" layoutY="46.0" prefWidth="150.0" />
+      <JFXButton layoutX="317.0" layoutY="36.0" onAction="#clickAddAction" text="Add...">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </JFXButton>
-      <Button fx:id="saveMovieBtn" layoutX="454.0" layoutY="344.0" mnemonicParsing="false" onAction="#clickSaveAction" text="Save" />
-      <Button fx:id="cancelMovieBtn" layoutX="367.0" layoutY="344.0" mnemonicParsing="false" onAction="#closeMovieAddBox" text="Cancel" />
-      <Button layoutX="230.0" layoutY="344.0" mnemonicParsing="false" onAction="#clickLoadCategoriesBtn" text="Load Categories" />
-      <TextField fx:id="txtImdbRating" layoutX="207.0" layoutY="182.0" />
-      <TextField fx:id="txtTitle" layoutX="207.0" layoutY="93.0" />
-      <Label layoutX="73.0" layoutY="225.0" text="File:">
+      <Button fx:id="saveMovieBtn" layoutX="5.0" layoutY="187.0" mnemonicParsing="false" onAction="#clickSaveAction" text="Save">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="cancelMovieBtn" layoutX="369.0" layoutY="187.0" mnemonicParsing="false" onAction="#closeMovieAddBox" text="Cancel">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="165.0" layoutY="187.0" mnemonicParsing="false" onAction="#clickLoadCategoriesBtn" text="Load Categories">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <TextField fx:id="txtImdbRating" layoutX="173.0" layoutY="82.0" />
+      <TextField fx:id="txtTitle" layoutX="173.0" layoutY="10.0" />
+      <Label layoutX="7.0" layoutY="150.0" text="File:">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <JFXButton layoutX="363.0" layoutY="219.0" onAction="#clickChooseFile" text="Choose...">
+      <JFXButton layoutX="316.0" layoutY="143.0" onAction="#clickChooseFile" text="Choose...">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </JFXButton>
-      <TextField layoutX="207.0" layoutY="228.0" />
+      <TextField layoutX="173.0" layoutY="152.0" />
+      <Label layoutX="7.0" layoutY="112.0" prefHeight="30.0" prefWidth="186.0" text="Personal Rating:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtImdbRating1" layoutX="173.0" layoutY="115.0" />
    </children>
 </AnchorPane>
