--- a/src/movie_project/gui/AddWindow.fxml
+++ b/src/movie_project/gui/AddWindow.fxml
@@ -55,7 +55,7 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </JFXButton>
-      <TextField layoutX="173.0" layoutY="152.0" />
+      <TextField fx:id="txtPath" layoutX="173.0" layoutY="152.0" />
       <Label layoutX="7.0" layoutY="112.0" prefHeight="30.0" prefWidth="186.0" text="Personal Rating:">
          <font>
             <Font name="System Bold" size="20.0" />
