--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -26,7 +26,7 @@
       <JFXTextField fx:id="filterField" layoutX="486.0" layoutY="14.0" />
       <JFXButton fx:id="searchBtn" layoutX="621.0" layoutY="14.0" onAction="#searchAction" text="🔍" />
       <Label layoutX="446.0" layoutY="18.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
-      <ListView layoutX="14.0" layoutY="79.0" prefHeight="370.0" prefWidth="200.0" />
+      <ListView fx:id="catList" layoutX="14.0" layoutY="79.0" prefHeight="370.0" prefWidth="200.0" />
       <Label layoutX="81.0" layoutY="51.0" prefHeight="25.0" prefWidth="66.0" text="Categories">
          <font>
             <Font name="System Bold" size="12.0" />
