--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="731.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
+<AnchorPane id="AnchorPane" prefHeight="560.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
    <children>
-      <TableView fx:id="movieView" layoutX="273.0" layoutY="51.0" onMouseClicked="#onSelectedMovie" prefHeight="398.0" prefWidth="432.0">
+      <TableView fx:id="movieView" layoutX="499.0" layoutY="67.0" onMouseClicked="#onSelectedMovie" prefHeight="398.0" prefWidth="432.0">
         <columns>
           <TableColumn fx:id="tableColumnName" prefWidth="105.0" text="Name" />
           <TableColumn fx:id="tableColumnRating" prefWidth="101.0" text="Imdb Rating" />
@@ -20,21 +20,27 @@
             <TableColumn fx:id="tableColumnOwnRating" prefWidth="113.0" text="My Rating" />
         </columns>
       </TableView>
-      <Button fx:id="newMovieBtn" layoutX="329.0" layoutY="458.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
-      <Button fx:id="editMovieBtn" layoutX="430.0" layoutY="458.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit Movie" />
-      <Button fx:id="playMovieBtn" layoutX="629.0" layoutY="458.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
-      <JFXTextField fx:id="filterField" layoutX="486.0" layoutY="14.0" />
-      <JFXButton fx:id="searchBtn" layoutX="621.0" layoutY="14.0" onAction="#searchAction" text="🔍" />
-      <Label layoutX="446.0" layoutY="18.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
-      <ListView fx:id="catList" layoutX="14.0" layoutY="79.0" onMouseClicked="#catSelectClick" prefHeight="370.0" prefWidth="200.0" />
-      <Label layoutX="81.0" layoutY="51.0" prefHeight="25.0" prefWidth="66.0" text="Categories">
+      <Button fx:id="newMovieBtn" layoutX="555.0" layoutY="474.0" mnemonicParsing="false" onAction="#newMovieOnAction" text="New Movie" />
+      <Button fx:id="editMovieBtn" layoutX="656.0" layoutY="474.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit Movie" />
+      <Button fx:id="playMovieBtn" layoutX="855.0" layoutY="474.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
+      <JFXTextField fx:id="filterField" layoutX="712.0" layoutY="30.0" />
+      <JFXButton fx:id="searchBtn" layoutX="847.0" layoutY="30.0" onAction="#searchAction" text="🔍" />
+      <Label layoutX="672.0" layoutY="34.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
+      <ListView fx:id="catList" layoutX="14.0" layoutY="67.0" onMouseClicked="#catSelectClick" prefHeight="398.0" prefWidth="200.0" />
+      <Label layoutX="81.0" layoutY="34.0" prefHeight="25.0" prefWidth="66.0" text="Categories">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="newCatBtn" layoutX="14.0" layoutY="458.0" mnemonicParsing="false" onAction="#NewCatAction" prefHeight="25.0" prefWidth="95.0" text="Add Category" />
-      <Button fx:id="btnDeleteMovie" layoutX="517.0" layoutY="458.0" mnemonicParsing="false" onAction="#clickDeleteAction" text="Delete Movie" />
-      <Button fx:id="btnDeleteCat" layoutX="114.0" layoutY="458.0" mnemonicParsing="false" onAction="#deleteCat" prefHeight="25.0" prefWidth="104.0" text="Delete Category" />
-      <Button layoutX="114.0" layoutY="495.0" mnemonicParsing="false" onAction="#setMovieCats" text="Set Category" />
+      <Button fx:id="newCatBtn" layoutX="12.0" layoutY="474.0" mnemonicParsing="false" onAction="#NewCatAction" prefHeight="25.0" prefWidth="95.0" text="Add Category" />
+      <Button fx:id="btnDeleteMovie" layoutX="743.0" layoutY="474.0" mnemonicParsing="false" onAction="#clickDeleteAction" text="Delete Movie" />
+      <Button fx:id="btnDeleteCat" layoutX="112.0" layoutY="474.0" mnemonicParsing="false" onAction="#deleteCat" prefHeight="25.0" prefWidth="104.0" text="Delete Category" />
+      <Button layoutX="112.0" layoutY="511.0" mnemonicParsing="false" onAction="#setMovieCats" text="Set Category" />
+      <ListView fx:id="movieCatList" layoutX="261.0" layoutY="67.0" prefHeight="398.0" prefWidth="200.0" />
+      <Label layoutX="261.0" layoutY="38.0" text="Movie categories">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
