--- a/src/movie_project/gui/BrugerFladeMain.fxml
+++ b/src/movie_project/gui/BrugerFladeMain.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="514.0" prefWidth="1189.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
+<AnchorPane id="AnchorPane" prefHeight="514.0" prefWidth="1189.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="movie_project.gui.BrugerFladeMainController">
    <children>
       <TableView fx:id="movieView" layoutX="737.0" layoutY="67.0" prefHeight="398.0" prefWidth="432.0">
         <columns>
@@ -24,7 +24,7 @@
       <Button fx:id="editMovieBtn" layoutX="908.0" layoutY="474.0" mnemonicParsing="false" onAction="#editMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Edit Movie" />
       <Button fx:id="playMovieBtn" layoutX="1093.0" layoutY="474.0" mnemonicParsing="false" onAction="#playMovieOnAction" prefHeight="25.0" prefWidth="76.0" text="Play" />
       <JFXTextField fx:id="filterField" layoutX="1020.0" layoutY="5.0" />
-      <JFXButton fx:id="searchBtn" layoutX="1155.0" layoutY="5.0" onAction="#searchAction" text="🔍" />
+      <JFXButton fx:id="searchBtn" layoutX="1155.0" layoutY="5.0" text="🔍" />
       <Label layoutX="980.0" layoutY="9.0" prefHeight="25.0" prefWidth="43.0" text="Filter:" />
       <ListView fx:id="catList" layoutX="14.0" layoutY="67.0" onMouseClicked="#catSelectClick" prefHeight="398.0" prefWidth="200.0" />
       <Label layoutX="81.0" layoutY="34.0" prefHeight="25.0" prefWidth="66.0" text="Categories">
